# postinstall

./: .envrc  ipython_startup.py  manifest.jsonc  manifest.yaml  pyproject.toml  pytest.ini
src/: __main__.py
tests/: test_hosts.py
