[project]
name = "postinstall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
[tool.uv]
dev-dependencies = [
  "pre-commit", "ipython", "ptpython", "pudb", "black", "flake8", "isort",
  "mypy", "pytest", "pytest-cov", "pdoc", "neovim"
]
